<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/bg_all"
    tools:context="com.example.cc.controller.activity.PlaygroundActivity">

    <RelativeLayout
        android:layout_above="@+id/input_layout"
        android:elevation="6dp"
        android:layout_margin="10dp"
        android:background="@drawable/layout_bg1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentTop="true">
            <LinearLayout
                android:id="@+id/messages_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/info_item"
                        android:layout_alignParentStart="true"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/controller_side" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/info_item"
                        android:layout_alignParentEnd="true"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/you"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="end"
                    android:background="@drawable/info_item"
                    android:text="@string/LOCK_SCREEN"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="end"
                    android:background="@drawable/info_item"
                    android:text="@string/PLAY_SOUND"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="end"
                    android:background="@drawable/info_item"
                    android:text="@string/STOP_SOUND"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="end"
                    android:background="@drawable/info_item"
                    android:text="@string/LOCATION"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_layout"
        android:elevation="6dp"
        android:layout_margin="10dp"
        android:background="@drawable/layout_bg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/input_et"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/enter_btn"/>

        <Button
            android:id="@+id/enter_btn"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="send"/>
    </RelativeLayout>

</RelativeLayout>
