<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_all"
    android:padding="10dp"
    tools:context="com.example.cc.controller.activity.MainActivity">

    <RelativeLayout
        android:id="@+id/playground"
        android:elevation="6dp"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@drawable/layout_bg1"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_navigation"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

    <com.skyfishjy.library.RippleBackground
        android:elevation="6dp"
        android:clickable="true"
        android:background="@drawable/layout_bg2"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:layout_below="@+id/playground"
        android:layout_above="@+id/buttons"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        app:rb_color="#0099CC"
        app:rb_radius="32dp"
        app:rb_rippleAmount="1"
        app:rb_duration="3000"
        app:rb_scale="6">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ToggleButton
                android:elevation="16dp"
                android:layout_centerInParent="true"
                android:checked="true"
                android:text="@string/enable_btn_main"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_margin="20dp"
                android:id="@+id/enable_btn_main"
                android:background="@drawable/start_btn" />
        </RelativeLayout>
    </com.skyfishjy.library.RippleBackground>

    <LinearLayout
        android:clickable="true"
        android:background="@drawable/layout_bg3"
        android:elevation="6dp"
        android:layout_margin="10dp"
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <TextView
            android:text="@string/default_sms_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sms_main"
            android:visibility="gone" />

        <Button
            android:text="@string/reset_btn_main"
            android:textColor="@color/text_color"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:visibility="visible" />

        <Button
            android:text="@string/help_btn_main"
            android:textColor="@color/text_color"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/help_btn_main"/>

    </LinearLayout>

</RelativeLayout>
